--- a/window.html
+++ b/window.html
@@ -3,6 +3,7 @@
   <head>
   </head>
   <body>
-    <div>Hello, world!</div>
+    <button id="findSave">Find your save file</button>
+    <script src="js/savefile.js"></script>
   </body>
 </html>
