Add Angular min 1.5.2.

--- a/window.html
+++ b/window.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="angular.min.js"></script>
   </head>
   <body>
     <button id="findSave">Find your save file</button>
