Fix exports not defined error.

--- a/window.html
+++ b/window.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="JournalEditor">
   <head>
+    <script src="js/init.js"></script>
     <script src="third_party/angular.min.js"></script>
     <script src="third_party/node-jspack/jspack.js"></script>
     <script src="js/app.js"></script>
